# opendev

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_FLOW.md  flake.nix  pyproject.toml
.config/: nextest.toml
.github/workflows/: release.yml
crates/opendev-agents/: Cargo.toml
crates/opendev-history/: Cargo.toml
crates/opendev-http/: Cargo.toml
crates/opendev-repl/: Cargo.toml
crates/opendev-runtime/: Cargo.toml
crates/opendev-tools-core/: Cargo.toml
crates/opendev-tools-impl/: Cargo.toml
crates/opendev-tools-symbol/: Cargo.toml
crates/opendev-tui/: Cargo.toml
docs/: agent-framework-adaptation.md  debug-subagent-spinner-cap.md  prd-web-ui-sync.md  subagent-execution-model.md  system-prompt-and-reminder-redesign.md
migration_docs/: COMPLETION_STATUS.md  PRODUCTION_OPERATIONS.md  SUBAGENT_ARCHITECTURE.md
opendev/: cli.py
tests/: e2e_full_cli_summarizer.py  e2e_react_executor_summarizer.py  e2e_session_persistence.py  test_bridge_mode_routing.py  test_bullet_selector.py  test_http_client_retry.py  test_interrupt_fixes.py  test_interrupt_guards.py  test_interrupt_phase_boundaries.py  test_interrupt_token_unified.py  test_interrupt_token_wiring.py  test_interrupt_tool_execution.py  test_interrupt_ui_callback.py  test_message_injection.py  test_parallel_real.py  test_parallel_tools.py  test_plugins_manager.py  test_present_plan_tool.py  test_react_loop_completion.py  test_reminders.py  test_staged_compaction.py  test_think_tool_fix.py  test_thinking_mode.py  test_tool_registry.py  test_vlm_routing.py
(+494 files in other folders)
