[package]
name = "opendev-tools-symbol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Symbol operations for OpenDev: find, references, rename, and replace body via LSP"

[dependencies]
opendev-models = { workspace = true }
opendev-config = { workspace = true }
opendev-tools-core = { workspace = true }
opendev-tools-lsp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
